--- a/index.html
+++ b/index.html
@@ -106,12 +106,10 @@
     </div>
 
     <h1>Pick the correct capital</h1>
-    <p class="sub">35 random countries. No feedback until the final score.</p>
+    <p class="sub">Each question shows 3 cities from the same country (capital + 2 famous cities). No feedback until the end.</p>
 
     <div class="country">
-      <div class="flagWrap" id="flagWrap">
-        <!-- Flag image injected here -->
-      </div>
+      <div class="flagWrap" id="flagWrap"></div>
       <div id="countryName">—</div>
     </div>
 
@@ -123,54 +121,59 @@
   </div>
 
   <script>
-    // [country, capital, ISO2]
+    /**
+     * Format:
+     * [country, capital (correct), decoyCity1, decoyCity2, ISO2]
+     *
+     * You can tweak decoy cities anytime (subjective).
+     */
     const EUROPE = [
-      ["Albania","Tirana","AL"],
-      ["Andorra","Andorra la Vella","AD"],
-      ["Austria","Vienna","AT"],
-      ["Belarus","Minsk","BY"],
-      ["Belgium","Brussels","BE"],
-      ["Bosnia and Herzegovina","Sarajevo","BA"],
-      ["Bulgaria","Sofia","BG"],
-      ["Croatia","Zagreb","HR"],
-      ["Cyprus","Nicosia","CY"],
-      ["Czechia","Prague","CZ"],
-      ["Denmark","Copenhagen","DK"],
-      ["Estonia","Tallinn","EE"],
-      ["Finland","Helsinki","FI"],
-      ["France","Paris","FR"],
-      ["Germany","Berlin","DE"],
-      ["Greece","Athens","GR"],
-      ["Hungary","Budapest","HU"],
-      ["Iceland","Reykjavik","IS"],
-      ["Ireland","Dublin","IE"],
-      ["Italy","Rome","IT"],
-      ["Kosovo","Pristina","XK"],       // flag image fallback if not available
-      ["Latvia","Riga","LV"],
-      ["Liechtenstein","Vaduz","LI"],
-      ["Lithuania","Vilnius","LT"],
-      ["Luxembourg","Luxembourg","LU"],
-      ["Malta","Valletta","MT"],
-      ["Moldova","Chișinău","MD"],
-      ["Monaco","Monaco","MC"],
-      ["Montenegro","Podgorica","ME"],
-      ["Netherlands","Amsterdam","NL"],
-      ["North Macedonia","Skopje","MK"],
-      ["Norway","Oslo","NO"],
-      ["Poland","Warsaw","PL"],
-      ["Portugal","Lisbon","PT"],
-      ["Romania","Bucharest","RO"],
-      ["Russia","Moscow","RU"],
-      ["San Marino","San Marino","SM"],
-      ["Serbia","Belgrade","RS"],
-      ["Slovakia","Bratislava","SK"],
-      ["Slovenia","Ljubljana","SI"],
-      ["Spain","Madrid","ES"],
-      ["Sweden","Stockholm","SE"],
-      ["Switzerland","Bern","CH"],
-      ["Ukraine","Kyiv","UA"],
-      ["United Kingdom","London","GB"],
-      ["Vatican City","Vatican City","VA"]
+      ["Albania","Tirana","Durrës","Vlorë","AL"],
+      ["Andorra","Andorra la Vella","Encamp","La Massana","AD"],
+      ["Austria","Vienna","Salzburg","Innsbruck","AT"],
+      ["Belarus","Minsk","Gomel","Brest","BY"],
+      ["Belgium","Brussels","Antwerp","Ghent","BE"],
+      ["Bosnia and Herzegovina","Sarajevo","Mostar","Banja Luka","BA"],
+      ["Bulgaria","Sofia","Plovdiv","Varna","BG"],
+      ["Croatia","Zagreb","Split","Dubrovnik","HR"],
+      ["Cyprus","Nicosia","Limassol","Larnaca","CY"],
+      ["Czechia","Prague","Brno","Český Krumlov","CZ"],
+      ["Denmark","Copenhagen","Aarhus","Odense","DK"],
+      ["Estonia","Tallinn","Tartu","Pärnu","EE"],
+      ["Finland","Helsinki","Tampere","Turku","FI"],
+      ["France","Paris","Marseille","Lyon","FR"],
+      ["Germany","Berlin","Munich","Hamburg","DE"],
+      ["Greece","Athens","Thessaloniki","Santorini","GR"],
+      ["Hungary","Budapest","Debrecen","Szeged","HU"],
+      ["Iceland","Reykjavik","Akureyri","Keflavík","IS"],
+      ["Ireland","Dublin","Cork","Galway","IE"],
+      ["Italy","Rome","Milan","Venice","IT"],
+      ["Kosovo","Pristina","Prizren","Peja","XK"],        // flag may fallback
+      ["Latvia","Riga","Daugavpils","Liepāja","LV"],
+      ["Liechtenstein","Vaduz","Schaan","Balzers","LI"],
+      ["Lithuania","Vilnius","Kaunas","Klaipėda","LT"],
+      ["Luxembourg","Luxembourg","Esch-sur-Alzette","Vianden","LU"],
+      ["Malta","Valletta","Mdina","Sliema","MT"],
+      ["Moldova","Chișinău","Tiraspol","Bălți","MD"],
+      ["Monaco","Monaco","Monte Carlo","La Condamine","MC"],
+      ["Montenegro","Podgorica","Kotor","Budva","ME"],
+      ["Netherlands","Amsterdam","Rotterdam","The Hague","NL"],
+      ["North Macedonia","Skopje","Ohrid","Bitola","MK"],
+      ["Norway","Oslo","Bergen","Trondheim","NO"],
+      ["Poland","Warsaw","Kraków","Gdańsk","PL"],
+      ["Portugal","Lisbon","Porto","Braga","PT"],
+      ["Romania","Bucharest","Cluj-Napoca","Timișoara","RO"],
+      ["Russia","Moscow","Saint Petersburg","Kazan","RU"],
+      ["San Marino","San Marino","Serravalle","Borgo Maggiore","SM"],
+      ["Serbia","Belgrade","Novi Sad","Niš","RS"],
+      ["Slovakia","Bratislava","Košice","High Tatras","SK"],
+      ["Slovenia","Ljubljana","Bled","Maribor","SI"],
+      ["Spain","Madrid","Barcelona","Seville","ES"],
+      ["Sweden","Stockholm","Gothenburg","Malmö","SE"],
+      ["Switzerland","Bern","Zurich","Geneva","CH"],
+      ["Ukraine","Kyiv","Lviv","Odesa","UA"],
+      ["United Kingdom","London","Edinburgh","Manchester","GB"],
+      ["Vatican City","Vatican City","Rome","Castel Gandolfo","VA"]
     ];
 
     const QUESTION_COUNT = 35;
@@ -197,15 +200,7 @@
       return copy.slice(0, Math.min(n, copy.length));
     }
 
-    function pickWrongCapitals(correctCapital, count=2){
-      const capitals = EUROPE.map(x => x[1]).filter(c => c !== correctCapital);
-      shuffle(capitals);
-      return capitals.slice(0, count);
-    }
-
     function renderFlag(iso2){
-      // Use FlagCDN images so flags work everywhere (mobile included).
-      // Some codes like XK may not exist — we handle onerror.
       const code = (iso2 || "").toLowerCase();
       $flagWrap.innerHTML = "";
 
@@ -213,7 +208,6 @@
       img.alt = iso2 ? `${iso2} flag` : "flag";
       img.loading = "lazy";
       img.decoding = "async";
-      // 48px wide container. Use 40px images + retina.
       img.src = `https://flagcdn.com/w40/${code}.png`;
       img.srcset = `https://flagcdn.com/w40/${code}.png 1x, https://flagcdn.com/w80/${code}.png 2x`;
 
@@ -227,7 +221,7 @@
     // --- Game state ---
     let questions = [];
     let index = 0;
-    let answers = []; // { country, iso2, correct, chosen }
+    let answers = []; // { country, iso2, correct, chosen, options }
 
     function startNewQuiz(){
       $results.style.display = "none";
@@ -247,12 +241,12 @@
         return;
       }
 
-      const [country, capital, iso2] = questions[index];
+      const [country, capital, city1, city2, iso2] = questions[index];
       $country.textContent = country;
       renderFlag(iso2);
       $qnum.textContent = String(index + 1);
 
-      const options = shuffle([capital, ...pickWrongCapitals(capital, 2)]);
+      const options = shuffle([capital, city1, city2]);
       $choices.innerHTML = "";
 
       options.forEach(opt => {
@@ -260,7 +254,7 @@
         btn.className = "choice";
         btn.type = "button";
         btn.textContent = opt;
-        btn.addEventListener("click", () => chooseAnswer(opt));
+        btn.addEventListener("click", () => chooseAnswer(opt, options));
         $choices.appendChild(btn);
       });
     }
@@ -269,17 +263,16 @@
       [...$choices.querySelectorAll("button.choice")].forEach(b => b.disabled = true);
     }
 
-    function chooseAnswer(chosen){
-      const [country, correct, iso2] = questions[index];
-
-      answers.push({ country, iso2, correct, chosen });
+    function chooseAnswer(chosen, options){
+      const [country, correct, , , iso2] = questions[index];
+      answers.push({ country, iso2, correct, chosen, options });
       disableChoices();
 
-      // No feedback — just continue shortly
+      // no feedback, just go next
       setTimeout(() => {
         index += 1;
         renderQuestion();
-      }, 200);
+      }, 180);
     }
 
     function showResults(){
@@ -323,7 +316,6 @@
     }
 
     $reset.addEventListener("click", startNewQuiz);
-
     startNewQuiz();
   </script>
 </body>
